# WGL_repo_2024

./: AP-protocol.md  Cargo.toml  README.md
crates/wg_controller/: Cargo.toml
crates/wg_controller/src/: command.rs  controller.rs  lib.rs
crates/wg_drone/src/: drone.rs
crates/wg_internal/: Cargo.toml
crates/wg_internal/src/: lib.rs
crates/wg_network/: Cargo.toml
crates/wg_network/src/: lib.rs  node.rs  routing.rs
crates/wg_packet/: Cargo.toml
crates/wg_packet/src/: flood.rs  message.rs  packet.rs
crates/wg_tests/: Cargo.toml
crates/wg_tests/src/: lib.rs  test_fragments.rs
examples/: drone_usage_example.rs  parser.rs
examples/config/: parser.rs
examples/drone/: drone_usage.rs
examples/message/: message.rs  server.rs
examples/qol_improvements/: qol_improvements.rs
examples/server/: server.rs
src/: Message.rs  main.rs
src/api/: client_server.rs  drone.rs  mod.rs  simulation_controller.rs
src/types/: channel.rs  command.rs  message.rs  message_api.rs  mod.rs  node.rs  packet.rs  routing.rs  simulation_controller.rs  source_routing_header.rs
src/types/topology/: mod.rs  routes.rs
